<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScontrinoActivity"
    tools:showIn="@layout/activity_scontrino">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/scontrino_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:scrollbars="vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelscontrino1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labelscontrino1"
                    android:textSize="24sp"
                    android:padding="15dp"/>

                <Spinner
                    android:id="@+id/productspinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"/>

                <TextView
                    android:id="@+id/labelscontrino2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labelscontrino2"
                    android:textSize="24sp"
                    android:padding="15dp"/>

                <EditText
                    android:id="@+id/scontrinoqta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labelscontrino3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labelscontrino3"
                    android:textSize="24sp"
                    android:padding="15dp"/>

                <EditText
                    android:id="@+id/scontrinocifra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/scontrinobutton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelscontrinobutton"
                    android:textSize="24sp"
                    android:padding="15dp"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/imageViewScontrino" />

                <TextView
                    android:id="@+id/labelscontrino4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labelscontrino4"
                    android:textSize="24sp"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/descrizionescontrino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:ems="10"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/inviascontrino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelscontrinobutton2"
                    android:textSize="24sp"
                    android:padding="15dp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>